--- a/index.html
+++ b/index.html
@@ -3,7 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <title>Document</title>
-
+  <style>
+    body {
+      border: 10px solid red;
+    }
+  </style>
 </head>
 <body>
   <iframe id="Example2"
