--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <style>
-    body {
-      border: 10px solid red;
-      background: red;
+    iframe {
+       margin: 0 auto;
     }
   </style>
 </head>
