--- a/index.html
+++ b/index.html
@@ -4,21 +4,25 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <style>
-    iframe {
-       margin: 0 auto;
+    .container {
+      width: 700px;
+      border: 10px solid red;
+      margin: 0 auto;
     }
   </style>
 </head>
 <body>
+  <div class="container">
   <iframe id="Example2"
     title="Example2"
-    width="400"
-    height="300"
+    width="700"
+    height="500"
     frameborder="0"
     scrolling="no"
     marginheight="500"
     marginwidth="500"
     src="https://www.youtube.com/embed/FTQAF4spX2k" frameborder="0" allowfullscreen
 </iframe>
+ </div>
 </body>
 </html>
