--- a/index.html
+++ b/index.html
@@ -4,10 +4,12 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <style>
+    body {
+      background: #eee;
+    }
     .container {
       width: 700px;
-      border: 10px solid red;
-      margin: 0 auto;
+      margin: 100px auto;
     }
   </style>
 </head>
@@ -15,7 +17,7 @@
   <div class="container">
   <iframe id="Example2"
     title="Example2"
-    width="700"
+    width="800"
     height="500"
     frameborder="0"
     scrolling="no"
