--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <style>
     body {
-      background: #eee;
+      background: rgba(100,100,100,.5);
     }
     .container {
       width: 700px;
