--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <title>Document</title>
   <style>
     body {
-      background: rgba(0,0,0,.9);
+      background: #000;
     }
     .container {
       width: 700px;
