--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       background: #000;
     }
     .container {
-      width: 1100px;
+      width: 1000px;
       margin: 100px auto;
     }
   </style>
@@ -17,7 +17,8 @@
   <div class="container">
   <iframe id="Example2"
     title="Example2"
-    width="1100"
+    width="1000"
+    height="600"
     frameborder="0"
     scrolling="no"
     src="https://www.youtube.com/embed/FTQAF4spX2k" frameborder="0" allowfullscreen
