--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
     title="Example2"
     width="1000"
     height="600"
+    marginwidth="800"
+    marginheight="800"
     frameborder="0"
     scrolling="no"
     src="https://www.youtube.com/embed/FTQAF4spX2k" frameborder="0" allowfullscreen
