--- a/index.html
+++ b/index.html
@@ -11,6 +11,11 @@
       width: 1000px;
       margin: 100px auto;
     }
+    p {
+      font: 18px;
+      color: #aaa;
+      text-align: center;
+    }
   </style>
 </head>
 <body>
@@ -25,6 +30,7 @@
     scrolling="no"
     src="https://www.youtube.com/embed/FTQAF4spX2k" frameborder="0" allowfullscreen
 </iframe>
+    <p>REPEAT</p>
  </div>
 </body>
 </html>
