--- a/index.html
+++ b/index.html
@@ -12,13 +12,14 @@
       margin: 100px auto;
     }
     p {
-      font: 18px;
-      color: #eee;
+      font-size: 16px;
+      color: #fff;
       text-align: center;
     }
   </style>
 </head>
 <body>
+ 
   <div class="container">
   <iframe id="Example2"
     title="Example2"
@@ -29,8 +30,8 @@
     frameborder="0"
     scrolling="no"
     src="https://www.youtube.com/embed/FTQAF4spX2k" frameborder="0" allowfullscreen
-</iframe>
-    <p>REPEAT</p>
+  </iframe>
+  <p>REPEAT</p>
  </div>
 </body>
 </html>
